Fix horizontal overflow between 673-712px viewport width
Add global box-sizing: border-box reset and update max-width values
to account for padding being included in the box model. Use negative
margin on nav ul to keep nav text aligned with page content.

--- a/styles/_blog.scss
+++ b/styles/_blog.scss
@@ -2,7 +2,7 @@
 
 .blog {
   &.container {
-    max-width: $xs;
+    max-width: calc($xs + 36px);
     margin: auto;
   }
   padding-left: 18px;
@@ -43,7 +43,7 @@
 }
 
 .post {
-  max-width: $xs;
+  max-width: calc($xs + 36px);
   margin: auto;
   padding-left: 18px;
   padding-right: 18px;
